--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="./css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -18,10 +18,15 @@
             <div class="container">
                 <ul class="menu">
                     <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
+                    <li class="menu_divider"></li>
                     <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
+                    <li class="menu_divider"></li>
                     <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
+                    <li class="menu_divider"></li>
                     <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
+                    <li class="menu_divider"></li>
                     <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
+                    <li class="menu_divider"></li>
                     <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
                 </ul>
             </div>
@@ -30,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 offset-md-1">
-                        <a href="#" class="subheader_logo"><img src="./img/Uber.png" alt="logo"></a>
+                        <a href="#" class="subheader_logo"><img src="img/Uber.png" alt="logo"></a>
                         <div class="subheader_official">Официальный партнер Uber в Москве</div>
                     </div>
                     <div class="col-md-2 offset-md-2">
@@ -62,7 +67,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="reasons_block">
-                            <div class="reasons_round"><img src="./img/icons/reason_icons/reason_icon_1.png" alt="reason_icon_1" class="reason_icon"></div>
+                            <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_1.png" alt="reason_icon_1" class="reason_icon"></div>
                             <div class="reasons_descr">
                                 <div class="reasons_subtitle">Никаких наличных, оплата происходит автоматически</div>
                                 <div class="reasons_text">Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков связанных с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для размена.</div>
@@ -72,7 +77,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="reasons_block">
-                            <div class="reasons_round"><img src="./img/icons/reason_icons/reason_icon_2.png" alt="reason_icon_2" class="reason_icon"></div>
+                            <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_2.png" alt="reason_icon_2" class="reason_icon"></div>
                             <div class="reasons_descr">
                                 <div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
                                 <div class="reasons_text">У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые наши конкуренты оставляют бонусы себе. Мы работаем честно и с нами водители зарабатывают больше!</div>
@@ -81,7 +86,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="reasons_block">
-                            <div class="reasons_round"><img src="./img/icons/reason_icons/reason_icon_3.png" alt="reason_icon_3" class="reason_icon"></div>
+                            <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_3.png" alt="reason_icon_3" class="reason_icon"></div>
                             <div class="reasons_descr">
                                 <div class="reasons_subtitle">Высокий доход с гарантированными выплатами</div>
                                 <div class="reasons_text">Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение банковского счета.</div>
@@ -90,7 +95,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="reasons_block">
-                            <div class="reasons_round"><img src="./img/icons/reason_icons/reason_icon_4.png" alt="reason_icon_4" class="reason_icon"></div>
+                            <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_4.png" alt="reason_icon_4" class="reason_icon"></div>
                             <div class="reasons_descr">
                                 <div class="reasons_subtitle">Работа в удобное время, никаких графиков</div>
                                 <div class="reasons_text">Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите закончить, нажимаете выйти с линии. Вы можете подраба-тывать только утром, вечером, в выходные или праздничные дни! </div>
@@ -99,7 +104,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="reasons_block">
-                            <div class="reasons_round"><img src="./img/icons/reason_icons/reason_icon_5.png" alt="reason_icon_5" class="reason_icon"></div>
+                            <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_5.png" alt="reason_icon_5" class="reason_icon"></div>
                             <div class="reasons_descr">
                                 <div class="reasons_subtitle">Комфортное, прозрачное и простое подключение</div>
                                 <div class="reasons_text">Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать работать!</div>
@@ -108,7 +113,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="reasons_block">
-                            <div class="reasons_round"><img src="./img/icons/reason_icons/reason_icon_6.png" alt="reason_icon_6" class="reason_icon"></div>
+                            <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_6.png" alt="reason_icon_6" class="reason_icon"></div>
                             <div class="reasons_descr">
                                 <div class="reasons_subtitle">Всегда большое количество заказов</div>
                                 <div class="reasons_text">Приложение показывает, где на данный момент больше всего заказов и где действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные и абсолютно неконфликтные люди, которых приятно возить.</div>
@@ -117,7 +122,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="reasons_block">
-                            <div class="reasons_round"><img src="./img/icons/reason_icons/reason_icon_7.png" alt="reason_icon_7" class="reason_icon"></div>
+                            <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_7.png" alt="reason_icon_7" class="reason_icon"></div>
                             <div class="reasons_descr">
                                 <div class="reasons_subtitle">Круглосуточная поддержка</div>
                                 <div class="reasons_text">В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.</div>
@@ -126,7 +131,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="reasons_block">
-                            <div class="reasons_round"><img src="./img/icons/reason_icons/reason_icon_8.png" alt="reason_icon_8" class="reason_icon"></div>
+                            <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_8.png" alt="reason_icon_8" class="reason_icon"></div>
                             <div class="reasons_descr">
                                 <div class="reasons_subtitle">Без шашечек и наклеек</div>
                                 <div class="reasons_text">Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его наклейками.</div>
