--- a/src/index.html
+++ b/src/index.html
@@ -203,7 +203,7 @@
                             <li>Работа только по безналичному расчету</li>
                             <li>Деньги перечисляем на карту водителю или наличными в офисе</li>
                         </ul>
-                        <div class="require_descr">В день заработок составляет 7000-12000р + бонус 3000т рублей</div>
+                        <div class="require_descr">В день заработок составляет 7000-12000р + бонус 3000 рублей</div>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -217,7 +217,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="require_block">
+                    <div class="require_block warning">
                         <div class="require_title">ТРЕБОВАНИЕ:</div>
                         <ul class="require_list">
                             <li>Наличие автомобиля без рекламы</li>
@@ -229,7 +229,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="require_block">
+                    <div class="require_block warning">
                         <div class="require_title">ДОКУМЕНТЫ:</div>
                         <ul class="require_list">
                             <li>Права 2 стороны</li>
