--- a/src/index.html
+++ b/src/index.html
@@ -244,6 +244,57 @@
             </div>
         </div>
     </section>
+    <section class="world">
+        <div class="container">
+            <div class="label label_white label_min">города</div>
+            <h2 class="title title_white">По всему миру</h2>
+            <h3 class="subtitle subtitle_white">Мы в вашем городе и по всему миру</h3>
+            <a href="#" class="world_link">посмотреть все города</a>
+        </div>
+    </section>
     </main>
+    <footer>
+        <div class="footer_divider"></div>
+        <div class="footer_wrapper">
+            <div>
+                <div class="footer_social">
+                    <a href="#" class="footer_social_item facebook"></a>
+                    <a href="#" class="footer_social_item twitter"></a>
+                    <a href="#" class="footer_social_item linkedin"></a>
+                    <a href="#" class="footer_social_item instagram"></a>
+                </div>
+            </div>
+            <div>
+                <div class="footer_links">
+                    <div class="footer_links_main">
+                        <a href="#">на главную</a>
+                        <a href="#">города</a>
+                        <a href="#">для водителей</a>
+                    </div>
+                    <div class="footer_links_sub">
+                        <a href="#">центр поддержки</a>
+                        <a href="#">вакансии</a>
+                        <a href="#">разработчики</a>
+                        <a href="#">блог</a>
+                        <a href="#">о нас</a>
+                    </div>
+                    <a href="#" class="footer_lang">русский</a>
+                </div>
+            </div>
+            <div>
+                <div class="footer_store">
+                    <a href="#" class="footer_store_item">
+                        <img width="94px" src="img/icons/app_stores/app_store.svg" alt="App Store">
+                    </a>
+                    <a href="#" class="footer_store_item">
+                        <img width="94px" src="img/icons/app_stores/google_play.svg" alt="Google Play">
+                    </a>
+                    <a href="#" class="footer_store_item">
+                        <img width="94px" src="img/icons/app_stores/windows_store.svg" alt="Windows Store">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
