change bg on svg

--- a/src/index.html
+++ b/src/index.html
@@ -258,10 +258,18 @@
         <div class="footer_wrapper">
             <div>
                 <div class="footer_social">
-                    <a href="#" class="footer_social_item facebook"></a>
-                    <a href="#" class="footer_social_item twitter"></a>
-                    <a href="#" class="footer_social_item linkedin"></a>
-                    <a href="#" class="footer_social_item instagram"></a>
+                    <a href="#" class="footer_social_item facebook">
+                        <svg height="18px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.8 18"><path d="M7.2,3H8.8V.1C8.5.1,7.6,0,6.4,0,4.2,0,2.6,1.5,2.6,4.2V6.7H0V9.9H2.6V18H5.8V10H8.3l.4-3.2H5.8V4.5C5.7,3.6,6,3,7.2,3Z" /></svg>
+                    </a>
+                    <a href="#" class="footer_social_item twitter">
+                        <svg width="20px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 16.24"><path d="M20,1.91a8.45,8.45,0,0,1-2.36.65A4,4,0,0,0,19.44.29a7.84,7.84,0,0,1-2.6,1A4.1,4.1,0,0,0,9.75,4.11,4.73,4.73,0,0,0,9.84,5,11.58,11.58,0,0,1,1.39.73,4.24,4.24,0,0,0,.83,2.81a4.1,4.1,0,0,0,1.82,3.4A3.88,3.88,0,0,1,.8,5.71h0a4.1,4.1,0,0,0,3.29,4A4,4,0,0,1,3,9.92a3.43,3.43,0,0,1-.78-.07A4.15,4.15,0,0,0,6.06,12.7,8.24,8.24,0,0,1,1,14.45a5.6,5.6,0,0,1-1-.06,11.33,11.33,0,0,0,6.29,1.84A11.57,11.57,0,0,0,18,4.79V4A8,8,0,0,0,20,1.91Z"/></svg>
+                    </a>
+                    <a href="#" class="footer_social_item linkedin">
+                        <svg width="14px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14"><path d="M12.6,0H1.4A1.4,1.4,0,0,0,0,1.4V12.6A1.4,1.4,0,0,0,1.4,14H12.6A1.4,1.4,0,0,0,14,12.6V1.4A1.4,1.4,0,0,0,12.6,0ZM4.2,11.9H2.1V5.6H4.2ZM3.15,4.41A1.26,1.26,0,1,1,4.41,3.15,1.25,1.25,0,0,1,3.15,4.41ZM11.9,11.9H9.8V8.19a1,1,0,0,0-2.1,0V11.9H5.6V5.6H7.7v.84a2.26,2.26,0,0,1,1.75-1A2.48,2.48,0,0,1,11.9,7.91Z"/></svg>
+                    </a>
+                    <a href="#" class="footer_social_item instagram">
+                        <svg width="16px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="M16,4.7a5.61,5.61,0,0,0-.37-1.94,3.91,3.91,0,0,0-.92-1.42A4,4,0,0,0,13.27.42,6.12,6.12,0,0,0,11.33.05C10.47,0,10.2,0,8,0S5.59,0,4.73.05A5.61,5.61,0,0,0,2.79.42a3.83,3.83,0,0,0-1.42.92A4,4,0,0,0,.45,2.76,5.86,5.86,0,0,0,.08,4.7,29.66,29.66,0,0,0,0,8v3.3a5.87,5.87,0,0,0,.38,1.94,4,4,0,0,0,.92,1.42,3.91,3.91,0,0,0,1.42.92,5.78,5.78,0,0,0,2,.42H8c2.15,0,2.44,0,3.29-.05a5.63,5.63,0,0,0,2-.37,4.14,4.14,0,0,0,2.34-2.34A6.13,6.13,0,0,0,16,11.3V4.7Zm-1.44,6.54a4.13,4.13,0,0,1-.27,1.48,2.65,2.65,0,0,1-1.52,1.52,4.47,4.47,0,0,1-1.49.28H4.82a4.37,4.37,0,0,1-1.48-.28,2.45,2.45,0,0,1-.92-.6,2.45,2.45,0,0,1-.6-.92,4.13,4.13,0,0,1-.27-1.48c0-.84-.05-1.1-.05-3.23s0-2.39.05-3.23A4.2,4.2,0,0,1,1.8,3.29a2.45,2.45,0,0,1,.6-.92,2.42,2.42,0,0,1,.92-.59A4.14,4.14,0,0,1,4.8,1.5c.85,0,1.1-.05,3.24-.05s2.39,0,3.23.05a4.14,4.14,0,0,1,1.48.28,2.31,2.31,0,0,1,.92.59,2.45,2.45,0,0,1,.6.92,4.22,4.22,0,0,1,.27,1.49c0,.84.05,1.09.05,3.23s0,2.38-.05,3.23Z"/><path d="M8,3.89A4.11,4.11,0,1,0,12.11,8,4.11,4.11,0,0,0,8,3.89Zm0,6.78A2.67,2.67,0,1,1,10.67,8,2.68,2.68,0,0,1,8,10.67Z"/><path d="M13.26,3.73a1,1,0,1,1-1-1A1,1,0,0,1,13.26,3.73Z"/></svg>
+                    </a>
                 </div>
             </div>
             <div>
@@ -278,7 +286,7 @@
                         <a href="#">блог</a>
                         <a href="#">о нас</a>
                     </div>
-                    <a href="#" class="footer_lang">русский</a>
+                    <a href="#" class="footer_links_lang">русский</a>
                 </div>
             </div>
             <div>
