--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
             <div class="label label_white">Возможности</div>
             <h2 class="title title_white">Выбор - отличная штука!</h2>
             <h3 class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</h3>
-            <img width="760px" src="img/car.png" alt="uber_car" class="choose_img">
+            <img src="img/car.png" alt="uber_car" class="choose_img">
             <div class="choose_descr">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
         </div>
     </section>
