--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,10 @@
             <div class="container">
                 <ul class="menu">
                     <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
-                    <li class="menu_divider"></li>
                     <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
-                    <li class="menu_divider"></li>
                     <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
-                    <li class="menu_divider"></li>
                     <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
-                    <li class="menu_divider"></li>
                     <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
-                    <li class="menu_divider"></li>
                     <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
                 </ul>
             </div>
@@ -38,7 +33,7 @@
                         <a href="#" class="subheader_logo"><img src="img/uber.svg" alt="logo"></a>
                         <div class="subheader_official">Официальный партнер Uber в Москве</div>
                     </div>
-                    <div class="col-md-2 offset-md-2">
+                    <div class="col-md-2 offset-md-2 col-lg-3 offset-lg-1">
                         <div class="subheader_call">Звоните нам ежедневно</div>
                         <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
                     </div>
@@ -191,7 +186,7 @@
         <h2 class="title">условия и требования</h2>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-xl-5 offset-xl-1">
                     <div class="require_block">
                         <div class="require_title">УСЛОВИЯ: со своим авто:</div>
                         <ul class="require_list">
@@ -206,7 +201,7 @@
                         <div class="require_descr">В день заработок составляет 7000-12000р + бонус 3000 рублей</div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-xl-5 offset-xl-1">
                     <div class="require_block">
                         <div class="require_title">УСЛОВИЯ: на авто компании:</div>
                         <ul class="require_list">
@@ -216,7 +211,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-xl-5 offset-xl-1">
                     <div class="require_block warning">
                         <div class="require_title">ТРЕБОВАНИЕ:</div>
                         <ul class="require_list">
@@ -228,7 +223,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-xl-5 offset-xl-1">
                     <div class="require_block warning">
                         <div class="require_title">ДОКУМЕНТЫ:</div>
                         <ul class="require_list">
