--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                         <a href="#" class="subheader_logo"><img src="img/uber.svg" alt="logo"></a>
                         <div class="subheader_official">Официальный партнер Uber в Москве</div>
                     </div>
-                    <div class="col-md-2 offset-md-2 col-lg-3 offset-lg-1">
+                    <div class="col-xl-2 offset-xl-2 col-lg-3">
                         <div class="subheader_call">Звоните нам ежедневно</div>
                         <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
                     </div>
