--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="reasons_block">
-                        <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_1.svg" alt="reason_icon_1" class="reason_icon"></div>
+                        <div class="reasons_round"><img width="60%" src="img/icons/reason_icons/reason_icon_1.svg" alt="reason_icon_1" class="reason_icon"></div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Никаких наличных, оплата происходит автоматически</div>
                             <div class="reasons_text">Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков связанных с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для размена.</div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="reasons_block">
-                        <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_2.svg" alt="reason_icon_2" class="reason_icon"></div>
+                        <div class="reasons_round"><img width="48%" src="img/icons/reason_icons/reason_icon_2.svg" alt="reason_icon_2" class="reason_icon"></div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
                             <div class="reasons_text">У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые наши конкуренты оставляют бонусы себе. Мы работаем честно и с нами водители зарабатывают больше!</div>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="reasons_block">
-                        <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_3.svg" alt="reason_icon_3" class="reason_icon"></div>
+                        <div class="reasons_round"><img width="54%" src="img/icons/reason_icons/reason_icon_3.svg" alt="reason_icon_3" class="reason_icon"></div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Высокий доход с гарантированными выплатами</div>
                             <div class="reasons_text">Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение банковского счета.</div>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="reasons_block">
-                        <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_4.svg" alt="reason_icon_4" class="reason_icon"></div>
+                        <div class="reasons_round"><img width="50%" src="img/icons/reason_icons/reason_icon_4.svg" alt="reason_icon_4" class="reason_icon"></div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Работа в удобное время, никаких графиков</div>
                             <div class="reasons_text">Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите закончить, нажимаете выйти с линии. Вы можете подраба-тывать только утром, вечером, в выходные или праздничные дни! </div>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="reasons_block">
-                        <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_5.svg" alt="reason_icon_5" class="reason_icon"></div>
+                        <div class="reasons_round"><img width="42%" src="img/icons/reason_icons/reason_icon_5.svg" alt="reason_icon_5" class="reason_icon"></div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Комфортное, прозрачное и простое подключение</div>
                             <div class="reasons_text">Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать работать!</div>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="reasons_block">
-                        <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_6.svg" alt="reason_icon_6" class="reason_icon"></div>
+                        <div class="reasons_round"><img width="47%" src="img/icons/reason_icons/reason_icon_6.svg" alt="reason_icon_6" class="reason_icon"></div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Всегда большое количество заказов</div>
                             <div class="reasons_text">Приложение показывает, где на данный момент больше всего заказов и где действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные и абсолютно неконфликтные люди, которых приятно возить.</div>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="reasons_block">
-                        <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_7.svg" alt="reason_icon_7" class="reason_icon"></div>
+                        <div class="reasons_round"><img width="58%" src="img/icons/reason_icons/reason_icon_7.svg" alt="reason_icon_7" class="reason_icon"></div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Круглосуточная поддержка</div>
                             <div class="reasons_text">В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.</div>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="reasons_block">
-                        <div class="reasons_round"><img src="img/icons/reason_icons/reason_icon_8.svg" alt="reason_icon_8" class="reason_icon"></div>
+                        <div class="reasons_round"><img width="54%" src="img/icons/reason_icons/reason_icon_8.svg" alt="reason_icon_8" class="reason_icon"></div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Без шашечек и наклеек</div>
                             <div class="reasons_text">Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его наклейками.</div>
@@ -287,13 +287,13 @@
             <div>
                 <div class="footer_store">
                     <a href="#" class="footer_store_item">
-                        <img width="94px" src="img/icons/app_stores/app_store.svg" alt="App Store">
+                        <img class="footer_store_img" src="img/icons/app_stores/app_store.svg" alt="App Store">
                     </a>
                     <a href="#" class="footer_store_item">
-                        <img width="94px" src="img/icons/app_stores/google_play.svg" alt="Google Play">
+                        <img class="footer_store_img" src="img/icons/app_stores/google_play.svg" alt="Google Play">
                     </a>
                     <a href="#" class="footer_store_item">
-                        <img width="94px" src="img/icons/app_stores/windows_store.svg" alt="Windows Store">
+                        <img class="footer_store_img" src="img/icons/app_stores/windows_store.svg" alt="Windows Store">
                     </a>
                 </div>
             </div>
