add some media rules

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,11 @@
                     <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
                 </ul>
             </div>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
         <div class="subheader">
             <div class="container">
@@ -48,7 +53,7 @@
     <section class="promo">
         <div class="container">
             <div class="row">
-                <div class="col-md-10 offset-md-1">
+                <div class="col-lg-10 offset-lg-1 col-md-12">
                     <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
                     <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
                     <div class="promo_descr">Компания UBER  динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система. Помимо выполненной работы по заказам, компания начисляет бонусы за пиковое время.<br><br>Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у нас зарабатывают от 80000 - 120000 в месяц.</div>
@@ -186,7 +191,7 @@
         <h2 class="title">условия и требования</h2>
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-xl-5 offset-xl-1">
+                <div class="col-md-10 offset-md-1 col-lg-6 offset-lg-0 col-xl-5 offset-xl-1">
                     <div class="require_block">
                         <div class="require_title">УСЛОВИЯ: со своим авто:</div>
                         <ul class="require_list">
@@ -201,7 +206,7 @@
                         <div class="require_descr">В день заработок составляет 7000-12000р + бонус 3000 рублей</div>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-5 offset-xl-1">
+                <div class="col-md-10 offset-md-1 col-lg-6 offset-lg-0 col-xl-5 offset-xl-1">
                     <div class="require_block">
                         <div class="require_title">УСЛОВИЯ: на авто компании:</div>
                         <ul class="require_list">
@@ -211,7 +216,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-5 offset-xl-1">
+                <div class="col-md-10 offset-md-1 col-lg-6 offset-lg-0 col-xl-5 offset-xl-1">
                     <div class="require_block warning">
                         <div class="require_title">ТРЕБОВАНИЕ:</div>
                         <ul class="require_list">
@@ -223,7 +228,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-5 offset-xl-1">
+                <div class="col-md-10 offset-md-1 col-lg-6 offset-lg-0 col-xl-5 offset-xl-1">
                     <div class="require_block warning">
                         <div class="require_title">ДОКУМЕНТЫ:</div>
                         <ul class="require_list">
@@ -299,5 +304,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
