--- a/src/index.html
+++ b/src/index.html
@@ -34,15 +34,16 @@
         <div class="subheader">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 offset-md-1">
+                    <div class="col-6 col-md-4 offset-md-1">
                         <a href="#" class="subheader_logo"><img src="img/uber.svg" alt="logo"></a>
                         <div class="subheader_official">Официальный партнер Uber в Москве</div>
                     </div>
-                    <div class="col-xl-2 offset-xl-2 col-lg-3 col-md-3">
-                        <div class="subheader_call">Звоните нам ежедневно</div>
+                    <div class="col-6 col-xl-2 offset-xl-2 col-lg-3 col-md-3">
+                        <div class="xs-hidden subheader_call">Звоните нам ежедневно</div>
                         <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
+                        <button class="xs-visible subheader_btn">заказать звонок</button>
                     </div>
-                    <div class="col-md-3">
+                    <div class="xs-hidden col-md-3">
                         <button class="subheader_btn">заказать звонок</button>
                     </div>
                 </div>
